tests/impl-corpus/corpus/reject/r_impl_duplicate.expect
error[T0513]: duplicate impl block for (trait: Some(...), type: ...): first impl at ...
  --> (input):9:1
   |
 9 | impl Eq for i32 {
   | ^^^^
